--- a/playbooks/roles/edxapp/defaults/main.yml
+++ b/playbooks/roles/edxapp/defaults/main.yml
@@ -61,7 +61,7 @@ EDXAPP_ZENDESK_API_KEY: ''
 EDXAPP_CELERY_USER: 'celery'
 EDXAPP_CELERY_PASSWORD: 'celery'
 
-EDXAPP_PLATFORM_NAME: 'edX'
+EDXAPP_PLATFORM_NAME: 'MuddX'
 
 EDXAPP_CAS_SERVER_URL: ''
 EDXAPP_CAS_EXTRA_LOGIN_PARAMS: ''
@@ -88,6 +88,8 @@ EDXAPP_BOOK_URL: ''
 # if xqueue is run on the same server
 # as the lms (it's sent in the request)
 EDXAPP_SITE_NAME: 'localhost'
+EDXAPP_LMS_SITE_NAME: 'http://www.muddx.com'
+EDXAPP_CMS_SITE_NAME: 'localhost'
 EDXAPP_MEDIA_URL:  ''
 EDXAPP_ANALYTICS_SERVER_URL:  ''
 EDXAPP_FEEDBACK_SUBMISSION_EMAIL: ''
@@ -108,13 +110,13 @@ EDXAPP_CMS_SSL_NGINX_PORT: 48010
 EDXAPP_LANG: 'en_US.UTF-8'
 EDXAPP_TIME_ZONE: 'America/New_York'
 
-EDXAPP_TECH_SUPPORT_EMAIL: 'technical@example.com'
-EDXAPP_CONTACT_EMAIL: 'info@example.com'
-EDXAPP_BUGS_EMAIL: 'bugs@example.com'
-EDXAPP_DEFAULT_FROM_EMAIL: 'registration@example.com'
-EDXAPP_DEFAULT_FEEDBACK_EMAIL: 'feedback@example.com'
-EDXAPP_DEFAULT_SERVER_EMAIL: 'devops@example.com'
-EDXAPP_BULK_EMAIL_DEFAULT_FROM_EMAIL: 'no-reply@example.com'
+EDXAPP_TECH_SUPPORT_EMAIL: 'technical@muddx.com'
+EDXAPP_CONTACT_EMAIL: 'info@muddx.com'
+EDXAPP_BUGS_EMAIL: 'bugs@muddx.com'
+EDXAPP_DEFAULT_FROM_EMAIL: 'registration@muddx.com'
+EDXAPP_DEFAULT_FEEDBACK_EMAIL: 'feedback@muddx.com'
+EDXAPP_DEFAULT_SERVER_EMAIL: 'devops@muddx.com'
+EDXAPP_BULK_EMAIL_DEFAULT_FROM_EMAIL: 'no-reply@muddx.com'
 
 EDXAPP_ENV_EXTRA: {}
 EDXAPP_AUTH_EXTRA: {}
