--- a/playbooks/roles/edxapp/defaults/main.yml
+++ b/playbooks/roles/edxapp/defaults/main.yml
@@ -87,8 +87,8 @@ EDXAPP_BOOK_URL: ''
 # This needs to be set to localhost
 # if xqueue is run on the same server
 # as the lms (it's sent in the request)
-EDXAPP_SITE_NAME: 'localhost'
-EDXAPP_LMS_SITE_NAME: 'http://www.muddx.com'
+EDXAPP_SITE_NAME: 'www.muddx.com'
+EDXAPP_LMS_SITE_NAME: 'www.muddx.com'
 EDXAPP_CMS_SITE_NAME: 'localhost'
 EDXAPP_MEDIA_URL:  ''
 EDXAPP_ANALYTICS_SERVER_URL:  ''
