--- a/playbooks/roles/edxapp/defaults/main.yml
+++ b/playbooks/roles/edxapp/defaults/main.yml
@@ -113,7 +113,7 @@ EDXAPP_TIME_ZONE: 'America/New_York'
 EDXAPP_TECH_SUPPORT_EMAIL: 'technical@muddx.com'
 EDXAPP_CONTACT_EMAIL: 'info@muddx.com'
 EDXAPP_BUGS_EMAIL: 'bugs@muddx.com'
-EDXAPP_DEFAULT_FROM_EMAIL: 'registration@muddx.com'
+EDXAPP_DEFAULT_FROM_EMAIL: 'registration2@muddx.com'
 EDXAPP_DEFAULT_FEEDBACK_EMAIL: 'feedback@muddx.com'
 EDXAPP_DEFAULT_SERVER_EMAIL: 'devops@muddx.com'
 EDXAPP_BULK_EMAIL_DEFAULT_FROM_EMAIL: 'no-reply@muddx.com'
